--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "amitkhare/InkRouter",
     "description": "InkRouter is an easy to use minimal PHP routing system.",
-    "homepage": "http://github.com/amitkhare/ink-router",
+    "homepage": "http://github.com/amitkhare/InkRouter",
     "license": "MIT",
     "autoload":{
         "psr-4":{
